[package]
name = "fingerprinting-cli"
version = "0.1.3"
edition = "2021"

[dependencies]
tokio.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_derive.workspace = true
hocon.workspace = true

halo2-axiom.workspace = true
rand_core.workspace = true

fingerprinting-core.workspace = true

fingerprinting-grpc.workspace = true
fingerprinting-grpc-agent.workspace = true

grpc-health-checking.workspace = true

clap = { version = "4.5", features = ["derive"] }

volo = "0.12"
volo-grpc = "0.12"

log.workspace = true
env_logger = "0.11"

[[bin]]
name = "fingerprinting-agent"
path = "src/bin/agent_server.rs"

[[bin]]
name = "fingerprinting-light-agent"
path = "src/bin/light_agent_server.rs"