[package]
name = "fingerprinting-core"
version = "0.1.3"
edition = "2021"
rust-version.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
halo2-axiom.workspace = true
chrono.workspace = true

fingerprinting-types.workspace = true

pso-poseidon = "0.1"

# logging support
log.workspace = true
# Create Specific Dependencies
bytes = "1.10"
regex = "1.11"
primitive-types = "0.14.0"
# bigint = "4.4"
bs58 = "0.5"
rand_core = "0.6.4"
futures = "0.3"

[dev-dependencies]
rand = "0.9"
hex = "0.4.3"