[package]
name = "fingerprinting-grpc"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
fingerprinting-core.workspace = true
fingerprinting-types.workspace = true

halo2-axiom.workspace = true
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true

volo = "0.11"
volo-grpc = "0.11"
volo-build = "0.11"
pilota = "0.12"
tokio-stream = "0.1.17"
futures = "0.3"

[build-dependencies]
volo-build = "0.11"

[dev-dependencies]
lazy_static = "1.5"