[package]
name = "fingerprinting-types"
version = "0.1.3"
edition = "2021"
rust-version.workspace = true

[dependencies]
chrono.workspace = true

# Create Specific Dependencies
derive_builder = "0.20.2"
iso4217-static = "0.2.2"
fixed-num = "0.1"
fixed-num-helper = "*"
anyhow = "1.0.101"

[dev-dependencies]
hex = "0.4"