[package]
name = "grpc-health-checking"
version = "0.1.3"
edition = "2021"
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
chrono.workspace = true

volo = "0.12"
volo-grpc = "0.12"
volo-build = "0.12"
pilota = "0.13"
tokio-stream = "0.1.17"
futures = "0.3"
time = "0.3.44"

[build-dependencies]
volo-build = "0.12"

[dev-dependencies]
lazy_static = "1.5"